# FFmpegDemo

./: README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/igniter/ffmpeg/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/tencent/ffmpegtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  capture_frame.cpp  play_video.cpp  utils.cpp  video.cpp
app/src/main/cpp/include/: utils.h
app/src/main/cpp/include/libavcodec/: avcodec.h  dv_profile.h  mediacodec.h  videotoolbox.h
app/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: aes_ctr.h  audio_fifo.h  avstring.h  bprint.h  cast5.h  channel_layout.h  common.h  dict.h  encryption_info.h  error.h  eval.h  fifo.h  file.h  frame.h  hwcontext.h  imgutils.h  lfg.h  log.h  mastering_display_metadata.h  mathematics.h  opt.h  parseutils.h  pixdesc.h  pixfmt.h  rational.h  ripemd.h  samplefmt.h  sha512.h  timecode.h  timestamp.h  tx.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/include/libyuv/: basic_types.h  compare.h  compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_argb.h  rotate_row.h  row.h  scale.h  scale_argb.h  scale_row.h  scale_uv.h  video_common.h
app/src/main/java/com/igniter/ffmpeg/: CaptureToolActivity.kt  FrameAdapter.kt  FrameInfo.kt  HomeActivity.kt  PlayVideoActivity.kt  VideoManager.kt
app/src/main/res/drawable/: common_dialog_bg.xml
app/src/main/res/layout/: activity_capture_tool.xml  activity_cut_video.xml  activity_home.xml  activity_play_video.xml  dialog_operation_bar.xml  dialog_select_repo.xml  dialog_select_strategy.xml  dialog_video_extract_info.xml  item_frame_layout.xml
app/src/main/res/values/: atts.xml  colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+51 files in other folders)
